# SteveModMakerGUI

./: .gitignore  BNTX.cpp  BUILDING_ON_LINUX.md  CMakeLists.txt  CMakePresets.json  CONVERSION_SUMMARY.md  EmbeddedAssets.hpp  GuiMain.cpp  GuiWindow.cpp  GuiWindow.hpp  ImageUtils.cpp  LINUX_CONVERSION.md  Main.cpp  MinecraftSkinUtil.cpp  MinecraftSkinUtil.hpp  MsgNameTemplate.cpp  MsgNameTemplate.hpp  Nutexb.cpp  Nutexb.hpp  README.md  TegraSwizzleCompat.cpp  UiCharaDbTemplate.cpp  UiCharaDbTemplate.hpp  license  tegra_swizzle.hpp
Resources/: msg_name.xmsbt  msg_name_other_slots_template.xmsbt  msg_name_slot1_template.xmsbt
Templates/big_arms/: def_pickel_001_col.nutexb
cmake/: DeployQtPlugins.cmake  GenerateMsgNameTemplate.cmake
cmake/toolchains/: mingw-w64.cmake
cmake/vcpkg-triplets/: x64-mingw-static.cmake  x64-windows-dbg.cmake  x64-windows-rel.cmake
packaging/: SteveModMaker.desktop
patch/fighter/pickel/model/body/c04/: def_pickel_001_col.nutexb
patch/ui/replace_patch/chara/chara_0/: chara_0_pickel_04.bntx
patch/ui/replace_patch/chara/chara_1/: chara_1_pickel_04.bntx
patch/ui/replace_patch/chara/chara_2/: chara_2_pickel_04.bntx
patch/ui/replace_patch/chara/chara_4/: chara_4_pickel_04.bntx
patch/ui/replace_patch/chara/chara_6/: chara_6_pickel_04.bntx
scripts/: build-appimage.sh  build-linux-and-windows.sh
